[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
